--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 
 /**** Navbar ****/
 .navbar {
@@ -52,7 +55,7 @@
    position: absolute; 
    top: 0;
    right: 0;
-   background: url('oljapic.jpg') no-repeat center center/cover;
+   background: url(' images.jpg/oljapic.jpg') no-repeat center center/cover;
    height: 900px;
    width: 100%;
    z-index: -1;
@@ -108,7 +111,7 @@
     display: flex;
     flex-direction: column;
     text-align: justify;
-    padding: 10px; 
+    padding: 50px; 
 }
 #intro h2 {
     font-size: 2rem;
@@ -118,7 +121,7 @@
 #portfolio {
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(48, 43, 43, 0.9);
     color: white;
     align-items: center;
     padding: 20px;
@@ -133,4 +136,88 @@
     width: 360px;
     height: 240px;
     margin: 10px;   
+}
+/***** Services *****/
+#services {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    height: 450px;
+    border: 1px solid black;
+    margin: 10px;
+    align-items: center;
+    text-align: justify;
+    padding: 10px;
+    border-radius: 15px;
+    background: linear-gradient(to top, rgb(81, 72, 163) 50%, white 50%);
+    background-size: 100% 200%;
+    transition: all .8sec;
+}
+.box:hover {
+    background-position:left bottom;
+    color: white;
+    border: none;
+    box-shadow: 0 0 20px rgb(4, 20, 243);
+}
+.box img {
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    padding: 10px;
+}
+
+/***** Contact Section *****/
+#contact {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 20px;
+}
+.form {
+    display:flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: center;
+    margin: 20px 0px; 
+}
+.input {
+    padding: 12px;
+    margin: 15px;
+    width: 30%;
+    border: none;
+    outline: none;
+}
+#msg {
+    width: 20%;
+    padding: 10px;
+    margin: 15px;
+    border: none;
+    outline: none;
+}
+#send {
+   padding: 10px;
+   width: 10%;
+   margin: 40px;
+   border: none;
+   outline: none; 
+   border-radius: 30px;
+}
+#send:hover {
+    cursor: pointer;
+    box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
 }
